# chat-with-pdf

./: .gitignore  PROJECT_CHECKLIST.md  PROJECT_STATUS.md  README.md  TONE_SELECTOR_FEATURE.md  cspell.json  package-lock.json  package.json
backend/: .env.example  .gitignore  DEPLOY_NOW.md  FAST_STARTUP_GUIDE.md  LLM_COMPATIBILITY_VERIFIED.md  NATURAL_RESPONSE_UPDATE.md  QUICK_SWITCH_GUIDE.md  README.md  RESPONSE_STYLE_GUIDE.md  SWITCHING_LLM_PROVIDERS.md  VPS_DEPLOYMENT_GUIDE.md  aaoifi-chatbot.service  conversations.db  cspell.json  deploy_server.sh  download_models.py  pyproject.toml  render.yaml  requirements.txt  reset_and_upload.py  start.py  start_gunicorn.sh  start_production.sh  start_server.sh  upload_pdf.py
backend/app/: main.py
backend/app/api/routes/: chat.py  conversations.py  health.py  memory.py  upload.py
backend/app/core/: config.py  json_parser.py  markdown_renderer.py  rag_engine.BAK  rag_engine_pro.py
backend/app/schemas/: chat.py  qa_response.py
backend/app/services/: conversation_service.py  document_processor.py  llm_service.py  vector_store.py
frontend/: .env.example  .env.production  .gitignore  DEPLOYMENT.md  MARKDOWN_TEST.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_FIX.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/.next/: trace
frontend/.next/server/: _error.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/lib/: utils.ts
(+409 files in other folders)
